@@ -5,6 +5,7 @@ Triple Double 1.0 beta 2, 2010-10-2
 
 - No longer depends on the PHP CURL extension
 - Refactored code
+- Module is now themeable via theme_triple_double()
 
 Triple Double 1.0 beta 1, 2010-09-27
 ------------------------------------
